--- a/hidp_django_admin/templates/admin/base.html
+++ b/hidp_django_admin/templates/admin/base.html
@@ -14,7 +14,7 @@
     {% if user.has_usable_password %}
     <a href="{% url 'hidp_account_management:manage_account' %}">{% trans 'Manage account' %}</a> / 
     {% endif %}
-    <form id="logout-form" method="post" action="{% url 'admin:logout' %}">
+    <form id="logout-form" method="post" action="{% url 'hidp_accounts:logout' %}">
         {% csrf_token %}
         <button type="submit">{% translate 'Log out' %}</button>
     </form>
