--- a/hidp_django_admin/templates/hidp/base_post_login.html
+++ b/hidp_django_admin/templates/hidp/base_post_login.html
@@ -47,7 +47,7 @@
             {% if user.has_usable_password %}
               <a href="{% url 'hidp_account_management:manage_account' %}">{% trans 'Manage account' %}</a> /
             {% endif %}
-            <form id="logout-form" method="post" action="{% url 'admin:logout' %}">
+            <form id="logout-form" method="post" action="{% url 'hidp_accounts:logout' %}">
               {% csrf_token %}
               <button type="submit">{% trans 'Log out' %}</button>
             </form>
