--- a/hidp_django_admin/templates/hidp/base_post_login.html
+++ b/hidp_django_admin/templates/hidp/base_post_login.html
@@ -1,6 +1,6 @@
 {% load csp_nonce i18n static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ LANGUAGE_CODE }}">
 <head>
   <title>{% block title %}{% endblock %}</title>
 
