--- a/hidp_django_admin/static/css/django_hidp_django_admin.css
+++ b/hidp_django_admin/static/css/django_hidp_django_admin.css
@@ -56,7 +56,7 @@ form .submit-row {
   gap: 10px;
 }
 
-form button[type="submit"], input[type="submit"] {
+form button[type="submit"], input[type="submit"], input[type="button"] {
   background: var(--button-bg);
   padding: 10px 15px;
   border: none;
@@ -64,6 +64,11 @@ form button[type="submit"], input[type="submit"] {
   color: var(--button-fg);
   cursor: pointer;
   transition: background 0.15s;
+}
+
+form button[disabled], input[type="submit"][disabled], input[type="button"][disabled] {
+    opacity: 0.4;
+    cursor: not-allowed
 }
 
 form button[type="submit"]:hover, input[type="submit"]:hover {
