Move width login form to pre_login

--- a/hidp_django_admin/templates/hidp/base_post_login.html
+++ b/hidp_django_admin/templates/hidp/base_post_login.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{% static 'admin/css/base.css' %}">
   <link rel="stylesheet" href="{% static 'admin/css/responsive.css' %}">
   <link rel="stylesheet" href="{% static 'admin/css/dashboard.css' %}">
-  <link rel="stylesheet" href="{% static 'css/django_hidp_django_admin.css' %}">
+  <link rel="stylesheet" href="{% static 'css/hidp_django_admin.css' %}">
   {% block dark-mode-vars %}
     <link rel="stylesheet" href="{% static 'admin/css/dark_mode.css' %}">
     <script src="{% static 'admin/js/theme.js' %}" nonce="{% csp_nonce %}"></script>
