--- a/hidp_django_admin/templates/hidp/base_pre_login.html
+++ b/hidp_django_admin/templates/hidp/base_pre_login.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="{% static 'admin/css/login.css' %}">
   <link rel="stylesheet" href="{% static 'admin/css/base.css' %}">
   {{ form.media }}
-  <link rel="stylesheet" href="{% static 'css/django_hidp_django_admin.css' %}">
+  <link rel="stylesheet" href="{% static 'css/hidp_django_admin_pre_login.css' %}">
+  <link rel="stylesheet" href="{% static 'css/hidp_django_admin.css' %}">
   {% block dark-mode-vars %}
     <link rel="stylesheet" href="{% static 'admin/css/dark_mode.css' %}">
   {% endblock %}
