--- a/hidp_django_admin/static/css/hidp_django_admin.css
+++ b/hidp_django_admin/static/css/hidp_django_admin.css
@@ -1,3 +1,8 @@
+li {
+  font-size: 14px;
+  line-height: 1.5;
+}
+
 #content {
   max-width: 600px;
   font-family: Arial, sans-serif;
@@ -28,13 +33,14 @@
 }
 
 form div {
-  margin-bottom: 10px;
+  margin-block: 1.2rem;
 }
 
 form label {
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 0.5rem;
   font-size: 14px;
+  font-weight: bold;
 }
 
 form input[type="text"],
@@ -55,7 +61,9 @@ form .submit-row {
   gap: 10px;
 }
 
-form button[type="submit"], input[type="submit"], input[type="button"] {
+form button[type="submit"],
+form input[type="submit"],
+form input[type="button"] {
   background: var(--button-bg);
   padding: 10px 15px;
   border: none;
@@ -65,12 +73,15 @@ form button[type="submit"], input[type="submit"], input[type="button"] {
   transition: background 0.15s;
 }
 
-form button[disabled], input[type="submit"][disabled], input[type="button"][disabled] {
+form button[disabled],
+form input[type="submit"][disabled],
+form input[type="button"][disabled] {
     opacity: 0.4;
     cursor: not-allowed
 }
 
-form button[type="submit"]:hover, input[type="submit"]:hover {
+form button[type="submit"]:hover,
+form input[type="submit"]:hover {
   background-color: var(--button-hover-bg);
 }
 
@@ -96,4 +107,36 @@ form input[type="submit"].submit-link {
 
 form input[type="submit"].submit-link:hover {
   color: var(--link-hover-color);
+}
+
+form .helptext {
+  margin-block: 0.5rem;
+  color: #757575;
+}
+
+form .helptext ul {
+  margin: 0 !important;
+}
+
+/* Increase distance between button and Cancel/Back link */
+form div button + a {
+  margin-left: 1rem;
+}
+
+/*
+Target checkbox/label combo's inside divs and paragraphs to make the checkbox
+appear on the left side of the label
+*/
+div:has(> label + input[type="checkbox"]),
+p:has(> label + input[type="checkbox"]) {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+  gap: 1rem;
+  justify-content: start;
+}
+
+div:has(> label + input[type="checkbox"]) label,
+p:has(> label + input[type="checkbox"]) label {
+  margin: 0;
 }
