--- a/hidp_django_admin/templates/hidp/base_post_login.html
+++ b/hidp_django_admin/templates/hidp/base_post_login.html
@@ -20,7 +20,7 @@
       <div id="branding">
         {% block branding %}
           <div id="site-name">
-            <a href="/django-admin/">{% trans 'Django-admin' %}</a>
+            <a href="{% url 'admin:index' %}">{% trans 'Django-admin' %}</a>
           </div>
         {% endblock %}
       </div>
