Correct some syntax errors

--- a/hidp_django_admin/static/css/hidp_django_admin.css
+++ b/hidp_django_admin/static/css/hidp_django_admin.css
@@ -77,7 +77,7 @@ form button[disabled],
 form input[type="submit"][disabled],
 form input[type="button"][disabled] {
     opacity: 0.4;
-    cursor: not-allowed
+    cursor: not-allowed;
 }
 
 form button[type="submit"]:hover,
