Add underline styling for HIdP links

--- a/packages/hidp_django_admin/hidp_django_admin/static/css/hidp_django_admin.css
+++ b/packages/hidp_django_admin/hidp_django_admin/static/css/hidp_django_admin.css
@@ -140,3 +140,8 @@ div:has(> label + input[type="checkbox"]) label,
 p:has(> label + input[type="checkbox"]) label {
   margin: 0;
 }
+
+li a:link,
+p a:link {
+  text-decoration: underline;
+}
