--- a/packages/hidp_django_admin/hidp_django_admin/static/css/hidp_django_admin.css
+++ b/packages/hidp_django_admin/hidp_django_admin/static/css/hidp_django_admin.css
@@ -141,7 +141,7 @@ p:has(> label + input[type="checkbox"]) label {
   margin: 0;
 }
 
-li a:link,
-p a:link {
+li a,
+p a {
   text-decoration: underline;
 }
