Change header styling to be consistent with django-admin

--- a/packages/hidp_django_admin/hidp_django_admin/templates/hidp/base_post_login.html
+++ b/packages/hidp_django_admin/hidp_django_admin/templates/hidp/base_post_login.html
@@ -19,9 +19,9 @@
     <header id="header">
       <div id="branding">
         {% block branding %}
-          <div id="site-name">
+          <h1 id="site-name">
             <a href="{% url 'admin:index' %}">{% trans 'Django-admin' %}</a>
-          </div>
+          </h1>
         {% endblock %}
       </div>
       {% block usertools %}
