--- a/packages/hidp_django_admin/hidp_django_admin/static/css/hidp_django_admin.css
+++ b/packages/hidp_django_admin/hidp_django_admin/static/css/hidp_django_admin.css
@@ -58,7 +58,7 @@ form .submit-row {
 form button[type="submit"],
 form input[type="submit"],
 form input[type="button"] {
-  background: var(--button-bg);
+  background: var(--default-button-bg);
   padding: 10px 15px;
   border: none;
   border-radius: 4px;
@@ -76,7 +76,7 @@ form input[type="button"][disabled] {
 
 form button[type="submit"]:hover,
 form input[type="submit"]:hover {
-  background-color: var(--button-hover-bg);
+  background-color: var(--default-button-hover-bg);
 }
 
 form a.default {
