[HIDP-254] Change the translation to an existing one

--- a/packages/hidp_django_admin/hidp_django_admin/templates/hidp/base_post_login.html
+++ b/packages/hidp_django_admin/hidp_django_admin/templates/hidp/base_post_login.html
@@ -20,7 +20,7 @@
       <div id="branding">
         {% block branding %}
           <h1 id="site-name">
-            <a href="{% url 'admin:index' %}">{% trans 'Django-admin' %}</a>
+            <a href="{% url 'admin:index' %}">{% trans 'Django administration' %}</a>
           </h1>
         {% endblock %}
       </div>
