--- a/packages/hidp_django_admin/hidp_django_admin/templates/hidp/base_post_login.html
+++ b/packages/hidp_django_admin/hidp_django_admin/templates/hidp/base_post_login.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{% static 'admin/css/dark_mode.css' %}">
     <script src="{% static 'admin/js/theme.js' %}" nonce="{% csp_nonce %}"></script>
   {% endblock %}
-  {% block extrastyle %}{% endblock %}
+  {% block extra_head %}{% endblock %}
 </head>
 
 <body>
